syntax = "proto3";
option java_multiple_files = true;
package energy;

message PowerReading {
  int64 timestamp_ms = 1;
  float watts        = 2;
}
