syntax = "proto3";
package energy;

import "google/protobuf/empty.proto";
import "power.proto";

service SolarService {
  rpc StreamPower (google.protobuf.Empty) returns (stream PowerReading);
}
